Change icon bottom navigation and Add menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="email">Email</string>
     <string name="masuk">Masuk</string>
     <string name="masuk_untuk_melanjutkan">Masuk Untuk Melanjutkan</string>
+    <string name="history">History</string>
+    <string name="dashboard">Dashboard</string>
+    <string name="profile">Profile</string>
 </resources>
