--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="history">History</string>
     <string name="dashboard">Dashboard</string>
     <string name="profile">Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pengaduan">Pengaduan</string>
+    <string name="mapel">Mapel</string>
+    <string name="nama_lengkap">Nama Lengkap</string>
+    <string name="jumlah_pelaporan">Jumlah Pelaporan</string>
+    <string name="t">TextView</string>
+    <string name="bantuan">Bantuan</string>
+    <string name="keluar">Keluar</string>
 </resources>
