--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,13 @@
     <string name="lagu15">Dengan penuh tekad dan keikhlasan</string>
     <string name="lagu16">Telkom Schools selalu tetap jaya</string>
     <string name="detail_5">Hymne Telkom Shcools</string>
+    <string name="nama_lengkap_detail">Nama Lengkap</string>
+    <string name="rayhan_rafiud_darojat">Rayhan Rafiud Darojat</string>
+    <string name="kelas">Kelas</string>
+    <string name="x_rpl_1">X RPL 1</string>
+    <string name="jumlah_point">Jumlah Point</string>
+    <string name="_100">100</string>
+    <string name="jumlah_pelanggaran">Jumlah Pelanggaran</string>
+    <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
 
 </resources>
