Done get history and laporan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,7 @@
     <string name="lagu15">Dengan penuh tekad dan keikhlasan</string>
     <string name="lagu16">Telkom Schools selalu tetap jaya</string>
     <string name="detail_5">Hymne Telkom Shcools</string>
+    <string name="lihat_detail">Lihat Detail</string>
+    <string name="_1">1</string>
 
 </resources>
