fix bukusaku 1.0 and user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,6 @@
     <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
     <string name="lihat_detail">Lihat Detail</string>
     <string name="_1">1</string>
+    <string name="email">Email</string>
 
 </resources>
