--- a/bukusakuonline/src/main/res/values/strings.xml
+++ b/bukusakuonline/src/main/res/values/strings.xml
@@ -144,5 +144,6 @@
     <string name="lihat_detail">Lihat Detail</string>
     <string name="_1">1</string>
     <string name="title_Profile">Profile</string>
+    <string name="email">Email</string>
 
 </resources>
