--- a/bukusakuonline/src/main/res/values/strings.xml
+++ b/bukusakuonline/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="password">Password</string>
-
+    <string name="email">Email</string>
     <string name="masuk">Masuk</string>
     <string name="masuk_untuk_melanjutkan">Masuk Untuk Melanjutkan</string>
     <string name="history">History</string>
