--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,5 +143,6 @@
     <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
     <string name="lihat_detail">Lihat Detail</string>
     <string name="_1">1</string>
+    <string name="peraturan_item">Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto</string>
 
 </resources>
