--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,58 @@
     <string name="tekaje">TKJ</string>
     <string name="tejea">TJA</string>
 
+    <string name="upload_bukti">Upload Bukti</string>
+    <string name="laporkan_pelanggaran">Laporkan Pelanggaran</string>
+    <string name="laporkan">Laporkan</string>
+
+    <string name="contoh_nis">Contoh : 3103117342</string>
+    <string name="nis">NIS</string>
+    <string name="kategori_pasal">Pilih Pasal</string>
+    <string name="pelanggaran">Pelanggaran</string>
+    <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
+    <string name="fitur_buku_sakuku">Fitur Buku Sakuku</string>
+    <string name="code">Kode</string>
+
+    <string name="deskripsi">Deskripsi</string>
+
+    <string name="point">Point</string>
+    <string name="overview">Overview</string>
+    <string name="jumlah_pelanggar">Jumlah Pelanggar</string>
+    <string name="jumlah_siswa">Jumlah Siswa</string>
+    <string name="pelanggaran_paling_sering">Pelanggaran Paling Sering</string>
+    <string name="detail_3">Lainnya</string>
+    <string name="detail_4">Tentang Kami</string>
+    <string name="lagu1">Telkom Schools peduli anak negri</string>
+    <string name="lagu2">Tuk berkembang dan berprestasi</string>
+    <string name="lagu3">Untuk cinta dan citra negara</string>
+    <string name="lagu">Memajukan Indonesia</string>
+    <string name="lagu4">Memajukan Indonesia</string>
+    <string name="lagu5">Telkom Schools membangun karya nyata</string>
+    <string name="lagu6">Memberdayakan nusa bangsa</string>
+    <string name="lagu7">Aspek pendidikan di semua kawasa</string>
+    <string name="lagu8">Sluruh penjuru nusantara</string>
+    <string name="lagu9">Kami berjanji mengembangkan potensi</string>
+    <string name="lagu10">Bakti memajukan bangsa</string>
+    <string name="lagu11">Untuk mengukir dan meraih prestasi</string>
+    <string name="lagu12">Demi ibu pertiwi</string>
+    <string name="lagu13">Bersama kita kan slalu mengabdi</string>
+    <string name="lagu14">Tuk sejahterakan bangsa</string>
+    <string name="lagu15">Dengan penuh tekad dan keikhlasan</string>
+    <string name="lagu16">Telkom Schools selalu tetap jaya</string>
+    <string name="detail_5">Hymne Telkom Shcools</string>
+    <string name="nama_lengkap_detail">Nama Lengkap</string>
+    <string name="rayhan_rafiud_darojat">Rayhan Rafiud Darojat</string>
+    <string name="x_rpl_1">X RPL 1</string>
+    <string name="jumlah_point">Jumlah Point</string>
+    <string name="_100">100</string>
+    <string name="jumlah_pelanggaran">Jumlah Pelanggaran</string>
+    <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
+    <string name="lihat_detail">Lihat Detail</string>
+    <string name="_1">1</string>
+    <string name="peraturan_item">Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto</string>
+    <string name="no_hp">No Hp</string>
+    <string name="attach_images_title">Choose Image</string>
+    <string name="searchsiswa">Search Siswa</string>
     <string-array name="RPL">
         <item>X RPL 1</item>
         <item>X RPL 1</item>
@@ -79,15 +131,6 @@
         <item>XII TKJ 3</item>
         <item>XII TKJ 4</item>
     </string-array>
-
-    <string name="upload_bukti">Upload Bukti</string>
-    <string name="laporkan_pelanggaran">Laporkan Pelanggaran</string>
-    <string name="laporkan">Laporkan</string>
-    <string name="contoh_nis">Contoh : 3103117342</string>
-    <string name="nis">NIS</string>
-    <string name="kategori_pasal">Pilih Pasal</string>
-    <string name="pelanggaran">Pelanggaran</string>
-
     <string-array name="spinner_kategori">
         <item>Nakal</item>
         <item>Rambut</item>
@@ -104,47 +147,5 @@
         <item>oke pas</item>
         <item>oke</item>
     </string-array>
-
-    <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
-    <string name="fitur_buku_sakuku">Fitur Buku Sakuku</string>
-    <string name="code">Kode</string>
-    <string name="deskripsi">Deskripsi</string>
-    <string name="point">Point</string>
-    <string name="overview">Overview</string>
-    <string name="jumlah_pelanggar">Jumlah Pelanggar</string>
-    <string name="jumlah_siswa">Jumlah Siswa</string>
-    <string name="pelanggaran_paling_sering">Pelanggaran Paling Sering</string>
-    <string name="detail_3">Lainnya</string>
-    <string name="detail_4">Tentang Kami</string>
-    <string name="lagu1">Telkom Schools peduli anak negri</string>
-    <string name="lagu2">Tuk berkembang dan berprestasi</string>
-    <string name="lagu3">Untuk cinta dan citra negara</string>
-    <string name="lagu">Memajukan Indonesia</string>
-    <string name="lagu4">Memajukan Indonesia</string>
-    <string name="lagu5">Telkom Schools membangun karya nyata</string>
-    <string name="lagu6">Memberdayakan nusa bangsa</string>
-    <string name="lagu7">Aspek pendidikan di semua kawasa</string>
-    <string name="lagu8">Sluruh penjuru nusantara</string>
-    <string name="lagu9">Kami berjanji mengembangkan potensi</string>
-    <string name="lagu10">Bakti memajukan bangsa</string>
-    <string name="lagu11">Untuk mengukir dan meraih prestasi</string>
-    <string name="lagu12">Demi ibu pertiwi</string>
-    <string name="lagu13">Bersama kita kan slalu mengabdi</string>
-    <string name="lagu14">Tuk sejahterakan bangsa</string>
-    <string name="lagu15">Dengan penuh tekad dan keikhlasan</string>
-    <string name="lagu16">Telkom Schools selalu tetap jaya</string>
-    <string name="detail_5">Hymne Telkom Shcools</string>
-    <string name="nama_lengkap_detail">Nama Lengkap</string>
-    <string name="rayhan_rafiud_darojat">Rayhan Rafiud Darojat</string>
-    <string name="x_rpl_1">X RPL 1</string>
-    <string name="jumlah_point">Jumlah Point</string>
-    <string name="_100">100</string>
-    <string name="jumlah_pelanggaran">Jumlah Pelanggaran</string>
-    <string name="pelanggaran_yang_dilakukan">Pelanggaran yang dilakukan</string>
-    <string name="lihat_detail">Lihat Detail</string>
-    <string name="_1">1</string>
-    <string name="peraturan_item">Tata Tertib Peserta didik SMK Telkom Purwokerto adalah peraturan-peraturan yang telah ditetapkan oleh Sekolah yang harus ditaati dan dilaksanakan oleh seluruh peserta didik SMK Telkom Purwokerto</string>
-    <string name="no_hp">No Hp</string>
-    <string name="attach_images_title">Choose Image</string>
 
 </resources>
