--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="history">History</string>
     <string name="dashboard">Dashboard</string>
     <string name="profile">Profile</string>
-
+    <string name="search_">goleki</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="pengaduan">Pengaduan</string>
