--- a/bukusakuonline/src/main/res/values/strings.xml
+++ b/bukusakuonline/src/main/res/values/strings.xml
@@ -146,5 +146,6 @@
     <string name="_1">1</string>
     <string name="title_Profile">Profile</string>
     <string name="_3103118061">3103118061</string>
+    <string name="foto_profile">Foto Profile</string>
 
 </resources>
