--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="attach_images_title">Choose Image</string>
     <string name="searchsiswa">Search Siswa</string>
     <string name="foto_profile">Foto Profile</string>
+    <string name="pilih_pelanggaran">Pilih Pelanggaran</string>
     <string-array name="RPL">
         <item>X RPL 1</item>
         <item>X RPL 1</item>
