--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="kategori_pasal">Pilih Pasal</string>
     <string name="pelanggaran">Pelanggaran</string>
     <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
-    <string name="fitur_buku_sakuku">Fitur Buku Sakuku</string>
+    <string name="fitur_buku_sakuku">Fitur Bukusaku</string>
     <string name="code">Kode</string>
 
     <string name="deskripsi">Deskripsi</string>
