--- a/bukusakuonline/src/main/res/values/strings.xml
+++ b/bukusakuonline/src/main/res/values/strings.xml
@@ -107,7 +107,7 @@
     </string-array>
 
     <string name="aktivitas_terbaru">Aktivitas Terbaru</string>
-    <string name="fitur_buku_sakuku">Fitur Buku Sakuku</string>
+    <string name="fitur_buku_sakuku">Fitur Bukusaku</string>
     <string name="code">Kode</string>
     <string name="deskripsi">Deskripsi</string>
     <string name="point">Point</string>
