ganti ig makhalibagas

--- a/bukusakuonline/src/main/res/values/strings.xml
+++ b/bukusakuonline/src/main/res/values/strings.xml
@@ -161,6 +161,6 @@
     <string name="igfaresa" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/faresa_pn/</string>
     <string name="igsindi" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/sindylail/</string>
     <string name="igyudhan" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/yudhan.jeffri/</string>
-    <string name="igbagas" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/bagas_makhali/</string>
+    <string name="igbagas" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/makhalibagas/</string>
     <string name="igdafa" translatable="false" tools:ignore="ExtraTranslation">https://www.instagram.com/dafaaaap/</string>
 </resources>
