--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,7 +161,7 @@
     <string name="igfaresa" translatable="false">https://www.instagram.com/faresa_pn/</string>
     <string name="igsindi" translatable="false">https://www.instagram.com/sindylail/</string>
     <string name="igyudhan" translatable="false">https://www.instagram.com/yudhan.jeffri/</string>
-    <string name="igbagas" translatable="false">https://www.instagram.com/bagas_makhali/</string>
+    <string name="igbagas" translatable="false">https://www.instagram.com/makhalibagas/</string>
     <string name="igdafa" translatable="false">https://www.instagram.com/dafaaaap/</string>
 
 </resources>
